# Thermalright-usblcd

./: CMakeLists.txt  LICENCE  NOTICE  README.md  sysmon.py  tr-driver.desktop
.github/workflows/: build-appimage.yml
USBLCD/images/000a/: lcd_config.json
USBLCD/images/000b/: lcd_config.json
USBLCD/images/000c/: lcd_config.json
USBLCD/images/000d/: lcd_config.json
USBLCD/images/000e/: lcd_config.json
USBLCD/images/001a/: lcd_config.json
USBLCD/images/001c/: lcd_config.json
USBLCD/images/001d/: lcd_config.json
USBLCD/images/001e/: lcd_config.json
USBLCD/images/002a/: lcd_config.json
USBLCD/images/002b/: lcd_config.json
USBLCD/images/002c/: lcd_config.json
USBLCD/images/002d/: lcd_config.json
USBLCD/images/002e/: lcd_config.json
USBLCD/images/003a/: lcd_config.json
USBLCD/images/003b/: lcd_config.json
USBLCD/images/003c/: lcd_config.json
USBLCD/images/003d/: lcd_config.json
USBLCD/images/003e/: lcd_config.json
USBLCD/images/004a/: lcd_config.json
USBLCD/images/004b/: lcd_config.json
USBLCD/images/004c/: lcd_config.json
USBLCD/images/004d/: lcd_config.json
USBLCD/images/004e/: lcd_config.json
USBLCD/images/005a/: lcd_config.json
USBLCD/images/005b/: lcd_config.json
USBLCD/images/005c/: lcd_config.json
USBLCD/images/005d/: lcd_config.json
USBLCD/images/005e/: lcd_config.json
USBLCD/images/006a/: lcd_config.json
USBLCD/images/006b/: lcd_config.json
USBLCD/images/006c/: lcd_config.json
USBLCD/images/006d/: lcd_config.json
USBLCD/images/006e/: lcd_config.json
USBLCD/images/007a/: lcd_config.json
USBLCD/images/007b/: lcd_config.json
USBLCD/images/007c/: lcd_config.json
USBLCD/images/007d/: lcd_config.json
USBLCD/images/007e/: lcd_config.json
USBLCD/images/008a/: lcd_config.json
USBLCD/images/008b/: lcd_config.json
USBLCD/images/008c/: lcd_config.json
USBLCD/images/008d/: lcd_config.json
USBLCD/images/008e/: lcd_config.json
USBLCD/images/009a/: lcd_config.json
USBLCD/images/009b/: lcd_config.json
USBLCD/images/009c/: lcd_config.json
USBLCD/images/009d/: lcd_config.json
USBLCD/images/009e/: lcd_config.json
USBLCD/images/010a/: lcd_config.json
USBLCD/images/010b/: lcd_config.json
USBLCD/images/010c/: lcd_config.json
USBLCD/images/010d/: lcd_config.json
USBLCD/images/010e/: lcd_config.json
USBLCD/images/011a/: lcd_config.json
USBLCD/images/011b/: lcd_config.json
USBLCD/images/011c/: lcd_config.json
USBLCD/images/011d/: lcd_config.json
USBLCD/images/011e/: lcd_config.json
USBLCD/images/012a/: lcd_config.json
USBLCD/images/012b/: lcd_config.json
USBLCD/images/012c/: lcd_config.json
USBLCD/images/012d/: lcd_config.json
USBLCD/images/012e/: lcd_config.json
USBLCD/images/013a/: lcd_config.json
USBLCD/images/013b/: lcd_config.json
USBLCD/images/013c/: lcd_config.json
USBLCD/images/013d/: lcd_config.json
USBLCD/images/013e/: lcd_config.json
USBLCD/images/014a/: lcd_config.json
USBLCD/images/014b/: lcd_config.json
USBLCD/images/014c/: lcd_config.json
USBLCD/images/014d/: lcd_config.json
USBLCD/images/014e/: lcd_config.json
USBLCD/images/015a/: lcd_config.json
USBLCD/images/015b/: lcd_config.json
USBLCD/images/015c/: lcd_config.json
USBLCD/images/015d/: lcd_config.json
USBLCD/images/015e/: lcd_config.json
USBLCD/images/016a/: lcd_config.json
USBLCD/images/016b/: lcd_config.json
USBLCD/images/016c/: lcd_config.json
USBLCD/images/016d/: lcd_config.json
USBLCD/images/016e/: lcd_config.json
USBLCD/images/017a/: lcd_config.json
USBLCD/images/017b/: lcd_config.json
USBLCD/images/017c/: lcd_config.json
USBLCD/images/017d/: lcd_config.json
USBLCD/images/017e/: lcd_config.json
USBLCD/images/018a/: lcd_config.json
USBLCD/images/018b/: lcd_config.json
USBLCD/images/018c/: lcd_config.json
USBLCD/images/018d/: lcd_config.json
USBLCD/images/018e/: lcd_config.json
USBLCD/images/019a/: lcd_config.json
USBLCD/images/019b/: lcd_config.json
USBLCD/images/019c/: lcd_config.json
USBLCD/images/019d/: lcd_config.json
USBLCD/images/019e/: lcd_config.json
USBLCD/images/020a/: lcd_config.json
USBLCD/images/020b/: lcd_config.json
USBLCD/images/020c/: lcd_config.json
USBLCD/images/020d/: lcd_config.json
USBLCD/images/020e/: lcd_config.json
USBLCD/images/021a/: lcd_config.json
USBLCD/images/021b/: lcd_config.json
USBLCD/images/021c/: lcd_config.json
USBLCD/images/021d/: lcd_config.json
USBLCD/images/021e/: lcd_config.json
cmake/: AppRun.in  write_desktop.cmake
debian/: changelog  control  copyright  install_tr_driver.sh  rules
docs/: api.md  further_reading.md
python/: background_selector.py  gui_controller.py  themed_messagebox.py
src/: CLcdDriver.cpp  CLcdDriver.h  bindings.cpp
